--- a/projetoAndroid/app/src/main/res/layout/activity_cadastrar_novo.xml
+++ b/projetoAndroid/app/src/main/res/layout/activity_cadastrar_novo.xml
@@ -7,13 +7,18 @@
     tools:context="com.example.crowwinter.projetoandroid.Cadastrar_novo">
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/txtNome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
-        tools:layout_editor_absoluteX="129dp"
-        tools:layout_editor_absoluteY="25dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="32dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/textView"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintHorizontal_bias="0.514" />
 
     <TextView
         android:id="@+id/textView"
@@ -21,8 +26,10 @@
         android:layout_height="wrap_content"
         android:text="NOME:"
         android:textSize="18sp"
-        tools:layout_editor_absoluteX="28dp"
-        tools:layout_editor_absoluteY="39dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="42dp"
+        android:layout_marginLeft="62dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <TextView
         android:id="@+id/textView2"
@@ -30,17 +37,24 @@
         android:layout_height="wrap_content"
         android:text="E-MAIL:"
         android:textSize="18sp"
-        tools:layout_editor_absoluteX="28dp"
-        tools:layout_editor_absoluteY="116dp" />
+        android:layout_marginTop="39dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        android:layout_marginLeft="57dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/txtEmail"
+        android:layout_marginRight="8dp"
+        app:layout_constraintHorizontal_bias="0.0" />
 
     <EditText
-        android:id="@+id/editText3"
+        android:id="@+id/txtEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textEmailAddress"
-        tools:layout_editor_absoluteX="129dp"
-        tools:layout_editor_absoluteY="103dp" />
+        android:layout_marginTop="7dp"
+        app:layout_constraintTop_toBottomOf="@+id/txtNome"
+        android:layout_marginRight="25dp"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <TextView
         android:id="@+id/textView5"
@@ -48,51 +62,78 @@
         android:layout_height="wrap_content"
         android:text="TELEFONE:"
         android:textSize="18sp"
-        tools:layout_editor_absoluteX="28dp"
-        tools:layout_editor_absoluteY="185dp" />
+        android:layout_marginTop="22dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        android:layout_marginLeft="28dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <EditText
-        android:id="@+id/editText4"
+        android:id="@+id/txtTelefone"
         android:layout_width="216dp"
         android:layout_height="37dp"
         android:ems="10"
         android:inputType="phone"
-        tools:layout_editor_absoluteX="129dp"
-        tools:layout_editor_absoluteY="177dp" />
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/txtEmail"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/textView5"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintHorizontal_bias="0.529" />
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="DATA:"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="23dp"
+        android:text="NASCIMENTO:"
         android:textSize="18sp"
-        tools:layout_editor_absoluteX="28dp"
-        tools:layout_editor_absoluteY="259dp" />
+        app:layout_constraintHorizontal_bias="0.8"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/txtNascimento"
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
     <EditText
-        android:id="@+id/editText6"
+        android:id="@+id/txtNascimento"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="date"
-        tools:layout_editor_absoluteX="129dp"
-        tools:layout_editor_absoluteY="252dp" />
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/txtTelefone"
+        android:layout_marginRight="25dp"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/btn_cadastrar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="22dp"
+        android:layout_marginTop="120dp"
         android:text="CADASTRAR"
-        tools:layout_editor_absoluteX="52dp"
-        tools:layout_editor_absoluteY="358dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.716"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/btn_voltar"
+        app:layout_constraintTop_toBottomOf="@+id/txtNascimento"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/btn_voltar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="onClickVoltar"
         android:text="VOLTAR"
-        tools:layout_editor_absoluteX="205dp"
-        tools:layout_editor_absoluteY="358dp" />
+        android:layout_marginTop="118dp"
+        app:layout_constraintTop_toBottomOf="@+id/txtNascimento"
+        android:layout_marginRight="66dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintVertical_bias="0.0" />
 
 </android.support.constraint.ConstraintLayout>
