--- a/projetoAndroid/app/src/main/res/layout/activity_dados_do_usuario.xml
+++ b/projetoAndroid/app/src/main/res/layout/activity_dados_do_usuario.xml
@@ -12,8 +12,16 @@
         android:layout_height="wrap_content"
         android:text="NOME:"
         android:textSize="18sp"
-        tools:layout_editor_absoluteX="28dp"
-        tools:layout_editor_absoluteY="39dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/editText2"
+        android:layout_marginRight="8dp"
+        app:layout_constraintHorizontal_bias="0.462"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView4"
+        app:layout_constraintVertical_bias="0.573" />
 
     <TextView
         android:id="@+id/textView4"
@@ -21,8 +29,13 @@
         android:layout_height="wrap_content"
         android:text="E-MAIL:"
         android:textSize="18sp"
-        tools:layout_editor_absoluteX="28dp"
-        tools:layout_editor_absoluteY="116dp" />
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/editText5"
+        android:layout_marginRight="8dp"
+        app:layout_constraintHorizontal_bias="0.51"
+        android:layout_marginBottom="30dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView6" />
 
     <TextView
         android:id="@+id/textView6"
@@ -30,8 +43,12 @@
         android:layout_height="wrap_content"
         android:text="TELEFONE:"
         android:textSize="18sp"
-        tools:layout_editor_absoluteX="28dp"
-        tools:layout_editor_absoluteY="185dp" />
+        tools:layout_editor_absoluteY="122dp"
+        app:layout_constraintRight_toLeftOf="@+id/editText11"
+        android:layout_marginRight="8dp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="1.0" />
 
     <TextView
         android:id="@+id/textView8"
@@ -39,16 +56,20 @@
         android:layout_height="wrap_content"
         android:text="DATA:"
         android:textSize="18sp"
-        tools:layout_editor_absoluteX="28dp"
-        tools:layout_editor_absoluteY="259dp" />
+        tools:layout_editor_absoluteX="33dp"
+        tools:layout_editor_absoluteY="177dp" />
 
     <Button
         android:id="@+id/button5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="ALTERAR"
-        tools:layout_editor_absoluteX="83dp"
-        tools:layout_editor_absoluteY="358dp" />
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/editText12"
+        android:layout_marginLeft="89dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp" />
 
     <Button
         android:id="@+id/button6"
@@ -56,8 +77,15 @@
         android:layout_height="wrap_content"
         android:onClick="onClickListar"
         android:text="VOLTAR"
-        tools:layout_editor_absoluteX="218dp"
-        tools:layout_editor_absoluteY="358dp" />
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/editText12"
+        app:layout_constraintLeft_toRightOf="@+id/button5"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintHorizontal_bias="0.3" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -66,8 +94,14 @@
         android:ems="10"
         android:enabled="false"
         android:inputType="textPersonName"
-        tools:layout_editor_absoluteX="126dp"
-        tools:layout_editor_absoluteY="29dp" />
+        android:id="@+id/editText2"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/editText5"
+        android:layout_marginRight="43dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -76,8 +110,10 @@
         android:ems="10"
         android:enabled="false"
         android:inputType="textPersonName"
-        tools:layout_editor_absoluteX="126dp"
-        tools:layout_editor_absoluteY="99dp" />
+        android:id="@+id/editText5"
+        android:layout_marginRight="43dp"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_editor_absoluteY="59dp" />
 
     <EditText
         android:id="@+id/editText11"
@@ -86,8 +122,13 @@
         android:ems="10"
         android:enabled="false"
         android:inputType="textPersonName"
-        tools:layout_editor_absoluteX="126dp"
-        tools:layout_editor_absoluteY="174dp" />
+        android:layout_marginRight="43dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/editText5"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/editText12"
+        app:layout_constraintVertical_bias="0.0" />
 
     <EditText
         android:id="@+id/editText12"
@@ -96,6 +137,9 @@
         android:ems="10"
         android:enabled="false"
         android:inputType="textPersonName"
-        tools:layout_editor_absoluteX="126dp"
-        tools:layout_editor_absoluteY="259dp" />
+        tools:layout_editor_absoluteY="164dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/textView8"
+        android:layout_marginLeft="8dp" />
 </android.support.constraint.ConstraintLayout>
