--- a/projetoAndroid/app/src/main/res/layout/activity_listar_todos.xml
+++ b/projetoAndroid/app/src/main/res/layout/activity_listar_todos.xml
@@ -4,6 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/background_light"
     tools:context="com.example.crowwinter.projetoandroid.Listar_todos">
 
+    <ListView
+        android:id="@+id/listViewID"
+        android:layout_width="368dp"
+        android:layout_height="495dp"
+        android:background="@android:color/background_light"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="8dp" />
 </android.support.constraint.ConstraintLayout>
