--- a/projetoAndroid/app/src/main/res/layout/activity_menu__principal.xml
+++ b/projetoAndroid/app/src/main/res/layout/activity_menu__principal.xml
@@ -7,20 +7,6 @@
     tools:context="com.example.crowwinter.projetoandroid.Menu_Principal">
 
     <Button
-        android:id="@+id/button"
-        android:layout_width="111dp"
-        android:layout_height="47dp"
-        android:onClick="onClick"
-        android:text="CADASTRAR"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="74dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.501" />
-
-    <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -35,4 +21,18 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
         app:layout_constraintVertical_bias="0.086" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="111dp"
+        android:layout_height="47dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="74dp"
+        android:onClick="onClick"
+        android:text="CADASTRAR"
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
