--- a/projetoAndroid/app/src/main/res/layout/activity_dados_do_usuario.xml
+++ b/projetoAndroid/app/src/main/res/layout/activity_dados_do_usuario.xml
@@ -53,11 +53,11 @@
     <TextView
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="DATA:"
+        android:layout_height="20dp"
+        android:text="NASCIMENTO:"
         android:textSize="18sp"
-        tools:layout_editor_absoluteX="33dp"
-        tools:layout_editor_absoluteY="177dp" />
+        tools:layout_editor_absoluteX="2dp"
+        tools:layout_editor_absoluteY="182dp" />
 
     <Button
         android:id="@+id/button5"
@@ -134,12 +134,13 @@
         android:id="@+id/editText12"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:ems="10"
         android:enabled="false"
         android:inputType="textPersonName"
-        tools:layout_editor_absoluteY="164dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.264"
         app:layout_constraintLeft_toRightOf="@+id/textView8"
-        android:layout_marginLeft="8dp" />
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_editor_absoluteY="170dp" />
 </android.support.constraint.ConstraintLayout>
