--- a/projetoAndroid/app/src/main/res/layout/activity_listar_todos.xml
+++ b/projetoAndroid/app/src/main/res/layout/activity_listar_todos.xml
@@ -11,7 +11,7 @@
         android:id="@+id/listViewID"
         android:layout_width="368dp"
         android:layout_height="495dp"
-        android:background="@android:color/background_light"
+        android:background="@android:color/background_dark"
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="8dp" />
 </android.support.constraint.ConstraintLayout>
