Deleção de usuário

--- a/projetoAndroid/app/src/main/res/layout/activity_listar_todos.xml
+++ b/projetoAndroid/app/src/main/res/layout/activity_listar_todos.xml
@@ -14,4 +14,12 @@
         android:background="@android:color/background_light"
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="8dp" />
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        tools:layout_editor_absoluteX="156dp"
+        tools:layout_editor_absoluteY="527dp" />
 </android.support.constraint.ConstraintLayout>
