--- a/projetoAndroid/app/src/main/res/layout/activity_cadastrar_novo.xml
+++ b/projetoAndroid/app/src/main/res/layout/activity_cadastrar_novo.xml
@@ -4,136 +4,116 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.crowwinter.projetoandroid.Cadastrar_novo">
+    tools:context="com.example.crowwinter.projetoandroid.Cadastrar_novo"
+    tools:layout_editor_absoluteY="81dp">
 
     <EditText
         android:id="@+id/txtNome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
         android:inputType="textPersonName"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="32dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/textView"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintHorizontal_bias="0.514" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:text="NOME:"
         android:textSize="18sp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="42dp"
-        android:layout_marginLeft="62dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintEnd_toEndOf="@+id/textView7"
+        app:layout_constraintStart_toStartOf="@+id/textView2"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:layout_marginEnd="30dp"
         android:text="E-MAIL:"
         android:textSize="18sp"
-        android:layout_marginTop="39dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        android:layout_marginLeft="57dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/txtEmail"
-        android:layout_marginRight="8dp"
-        app:layout_constraintHorizontal_bias="0.0" />
+        app:layout_constraintBottom_toBottomOf="@+id/txtEmail"
+        app:layout_constraintEnd_toStartOf="@+id/txtEmail" />
 
     <EditText
         android:id="@+id/txtEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="12dp"
         android:ems="10"
         android:inputType="textEmailAddress"
-        android:layout_marginTop="7dp"
-        app:layout_constraintTop_toBottomOf="@+id/txtNome"
-        android:layout_marginRight="25dp"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtNome" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:text="TELEFONE:"
         android:textSize="18sp"
-        android:layout_marginTop="22dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        android:layout_marginLeft="28dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintBottom_toBottomOf="@+id/txtTelefone"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/txtTelefone"
-        android:layout_width="216dp"
-        android:layout_height="37dp"
+        android:layout_width="218dp"
+        android:layout_height="47dp"
+        android:layout_marginBottom="67dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="65dp"
         android:ems="10"
         android:inputType="phone"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/txtEmail"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/textView5"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintHorizontal_bias="0.529" />
+        app:layout_constraintBottom_toBottomOf="@+id/txtNascimento"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/txtEmail" />
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="23dp"
+        android:layout_marginTop="228dp"
         android:text="NASCIMENTO:"
         android:textSize="18sp"
-        app:layout_constraintHorizontal_bias="0.8"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/txtNascimento"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/txtNascimento"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
         android:ems="10"
         android:inputType="date"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/txtTelefone"
-        android:layout_marginRight="25dp"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintBottom_toBottomOf="@+id/textView7"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/btn_cadastrar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="22dp"
-        android:layout_marginTop="120dp"
+        android:layout_marginBottom="121dp"
+        android:layout_marginStart="76dp"
         android:text="CADASTRAR"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.716"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/btn_voltar"
-        app:layout_constraintTop_toBottomOf="@+id/txtNascimento"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btn_voltar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="50dp"
+        android:layout_marginStart="49dp"
         android:onClick="onClickVoltar"
         android:text="VOLTAR"
-        android:layout_marginTop="118dp"
-        app:layout_constraintTop_toBottomOf="@+id/txtNascimento"
-        android:layout_marginRight="66dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/btn_cadastrar"
+        app:layout_constraintEnd_toEndOf="@+id/txtNascimento"
+        app:layout_constraintStart_toEndOf="@+id/btn_cadastrar" />
 
 </android.support.constraint.ConstraintLayout>
