--- a/projetoAndroid/app/src/main/res/layout/activity_dados_do_usuario.xml
+++ b/projetoAndroid/app/src/main/res/layout/activity_dados_do_usuario.xml
@@ -10,137 +10,129 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
         android:text="NOME:"
         android:textSize="18sp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/editText2"
-        android:layout_marginRight="8dp"
-        app:layout_constraintHorizontal_bias="0.462"
-        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/textView4"
+        app:layout_constraintHorizontal_bias="0.462"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/txtNome"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.573" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="30dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:text="E-MAIL:"
         android:textSize="18sp"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/editText5"
-        android:layout_marginRight="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView6"
         app:layout_constraintHorizontal_bias="0.51"
-        android:layout_marginBottom="30dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView6" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/txtEmail" />
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:text="TELEFONE:"
         android:textSize="18sp"
-        tools:layout_editor_absoluteY="122dp"
-        app:layout_constraintRight_toLeftOf="@+id/editText11"
-        android:layout_marginRight="8dp"
-        android:layout_marginLeft="8dp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/txtTelefone"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="1.0" />
+        app:layout_constraintRight_toLeftOf="@+id/txtTelefone" />
 
     <TextView
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="20dp"
+        android:layout_marginBottom="39dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="35dp"
         android:text="NASCIMENTO:"
         android:textSize="18sp"
-        tools:layout_editor_absoluteX="2dp"
-        tools:layout_editor_absoluteY="182dp" />
-
-    <Button
-        android:id="@+id/button5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="ALTERAR"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/editText12"
-        android:layout_marginLeft="89dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp" />
+        app:layout_constraintBottom_toBottomOf="@+id/txtData"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <Button
         android:id="@+id/button6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginRight="132dp"
+        android:layout_marginTop="8dp"
         android:onClick="onClickListar"
         android:text="VOLTAR"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/editText12"
-        app:layout_constraintLeft_toRightOf="@+id/button5"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintHorizontal_bias="0.3" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtData"
+        app:layout_constraintVertical_bias="0.524" />
 
     <EditText
+        android:id="@+id/txtNome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginRight="43dp"
+        android:layout_marginTop="8dp"
         android:editable="false"
         android:ems="10"
         android:enabled="false"
         android:inputType="textPersonName"
-        android:id="@+id/editText2"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/editText5"
-        android:layout_marginRight="43dp"
+        app:layout_constraintBottom_toTopOf="@+id/txtEmail"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
 
     <EditText
+        android:id="@+id/txtEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginRight="43dp"
+        android:layout_marginTop="59dp"
         android:editable="false"
         android:ems="10"
         android:enabled="false"
         android:inputType="textPersonName"
-        android:id="@+id/editText5"
-        android:layout_marginRight="43dp"
         app:layout_constraintRight_toRightOf="parent"
-        tools:layout_editor_absoluteY="59dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editText11"
+        android:id="@+id/txtTelefone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginRight="43dp"
+        android:layout_marginTop="8dp"
         android:ems="10"
         android:enabled="false"
         android:inputType="textPersonName"
-        android:layout_marginRight="43dp"
+        app:layout_constraintBottom_toTopOf="@+id/txtData"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/editText5"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/editText12"
+        app:layout_constraintTop_toBottomOf="@+id/txtEmail"
         app:layout_constraintVertical_bias="0.0" />
 
     <EditText
-        android:id="@+id/editText12"
+        android:id="@+id/txtData"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
+        android:layout_marginTop="195dp"
         android:ems="10"
         android:enabled="false"
         android:inputType="textPersonName"
-        app:layout_constraintHorizontal_bias="0.264"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toRightOf="@+id/textView8"
         app:layout_constraintRight_toRightOf="parent"
-        tools:layout_editor_absoluteY="170dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
