--- a/projetoAndroid/app/src/main/res/layout/activity_cadastrar_novo.xml
+++ b/projetoAndroid/app/src/main/res/layout/activity_cadastrar_novo.xml
@@ -9,7 +9,7 @@
 
     <EditText
         android:id="@+id/txtNome"
-        android:layout_width="wrap_content"
+        android:layout_width="212dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginTop="16dp"
@@ -22,30 +22,31 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="30dp"
         android:text="NOME:"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="@+id/textView7"
-        app:layout_constraintStart_toStartOf="@+id/textView2"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:layout_marginEnd="30dp"
+        android:layout_width="54dp"
+        android:layout_height="28dp"
+        android:layout_marginBottom="89dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="87dp"
         android:text="E-MAIL:"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/txtEmail"
-        app:layout_constraintEnd_toStartOf="@+id/txtEmail" />
+        app:layout_constraintBottom_toTopOf="@+id/txtNascimento"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <EditText
         android:id="@+id/txtEmail"
-        android:layout_width="wrap_content"
+        android:layout_width="212dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="8dp"
         android:ems="10"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
@@ -53,67 +54,65 @@
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="74dp"
+        android:layout_height="25dp"
+        android:layout_marginBottom="28dp"
         android:layout_marginStart="16dp"
         android:text="TELEFONE:"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/txtTelefone"
+        app:layout_constraintBottom_toTopOf="@+id/textView7"
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/txtTelefone"
-        android:layout_width="218dp"
-        android:layout_height="47dp"
-        android:layout_marginBottom="67dp"
+        android:layout_width="212dp"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:layout_marginTop="65dp"
+        android:layout_marginTop="13dp"
         android:ems="10"
         android:inputType="phone"
-        app:layout_constraintBottom_toBottomOf="@+id/txtNascimento"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/txtEmail" />
+        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />
 
     <TextView
         android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="228dp"
+        android:layout_width="99dp"
+        android:layout_height="26dp"
+        android:layout_marginStart="16dp"
         android:text="NASCIMENTO:"
-        android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/txtNascimento"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/txtNascimento"
-        android:layout_width="wrap_content"
+        android:layout_width="212dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
+        android:layout_marginTop="13dp"
         android:ems="10"
         android:inputType="date"
-        app:layout_constraintBottom_toBottomOf="@+id/textView7"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtTelefone" />
 
     <Button
         android:id="@+id/btn_cadastrar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="121dp"
-        android:layout_marginStart="76dp"
+        android:layout_marginStart="48dp"
         android:text="CADASTRAR"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBaseline_toBaselineOf="@+id/btn_voltar"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btn_voltar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="50dp"
-        android:layout_marginStart="49dp"
+        android:layout_marginBottom="114dp"
+        android:layout_marginEnd="90dp"
+        android:layout_marginStart="89dp"
         android:onClick="onClickVoltar"
         android:text="VOLTAR"
-        app:layout_constraintBaseline_toBaselineOf="@+id/btn_cadastrar"
-        app:layout_constraintEnd_toEndOf="@+id/txtNascimento"
-        app:layout_constraintStart_toEndOf="@+id/btn_cadastrar" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView7" />
 
 </android.support.constraint.ConstraintLayout>
