--- a/projetoAndroid/app/src/main/res/layout/activity_listar_todos.xml
+++ b/projetoAndroid/app/src/main/res/layout/activity_listar_todos.xml
@@ -10,9 +10,27 @@
     <ListView
         android:id="@+id/listViewID"
         android:layout_width="377dp"
-        android:layout_height="498dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="22dp"
+        android:layout_marginEnd="7dp"
+        android:layout_marginTop="16dp"
         android:background="@android:color/background_light"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp" />
+        app:layout_constraintBottom_toTopOf="@+id/btnVoltar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.177" />
+
+    <Button
+        android:id="@+id/btnVoltar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="17dp"
+        android:layout_marginStart="137dp"
+        android:text="Voltar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/listViewID" />
 
 </android.support.constraint.ConstraintLayout>
