--- a/projetoAndroid/app/src/main/res/layout/activity_cadastrar_novo.xml
+++ b/projetoAndroid/app/src/main/res/layout/activity_cadastrar_novo.xml
@@ -9,110 +9,118 @@
 
     <EditText
         android:id="@+id/txtNome"
-        android:layout_width="212dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginEnd="40dp"
         android:ems="10"
         android:inputType="textPersonName"
+        app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/textView"
+        app:layout_constraintTop_toTopOf="@+id/textView" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginBottom="23dp"
+        android:layout_marginEnd="21dp"
+        android:layout_marginStart="68dp"
         android:text="NOME:"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/txtEmail"
+        app:layout_constraintEnd_toStartOf="@+id/txtNome"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="54dp"
-        android:layout_height="28dp"
-        android:layout_marginBottom="89dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="87dp"
-        android:text="E-MAIL:"
-        app:layout_constraintBottom_toTopOf="@+id/txtNascimento"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <EditText
-        android:id="@+id/txtEmail"
-        android:layout_width="212dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginTop="8dp"
-        android:ems="10"
-        android:inputType="textEmailAddress"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtNome" />
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="74dp"
-        android:layout_height="25dp"
-        android:layout_marginBottom="28dp"
-        android:layout_marginStart="16dp"
-        android:text="TELEFONE:"
-        app:layout_constraintBottom_toTopOf="@+id/textView7"
+        android:layout_marginBottom="1dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginStart="60dp"
+        android:text="E-MAIL:"
+        app:layout_constraintBottom_toBottomOf="@+id/txtEmail"
+        app:layout_constraintEnd_toStartOf="@+id/txtEmail"
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
-        android:id="@+id/txtTelefone"
-        android:layout_width="212dp"
+        android:id="@+id/txtEmail"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginTop="13dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginTop="98dp"
+        android:ems="10"
+        android:inputType="textEmailAddress"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView2"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="21dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="30dp"
+        android:text="TELEFONE:"
+        app:layout_constraintEnd_toStartOf="@+id/txtTelefone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/txtTelefone" />
+
+    <EditText
+        android:id="@+id/txtTelefone"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="40dp"
+        android:layout_marginTop="19dp"
         android:ems="10"
         android:inputType="phone"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView5"
         app:layout_constraintTop_toBottomOf="@+id/txtEmail" />
 
     <TextView
         android:id="@+id/textView7"
-        android:layout_width="99dp"
-        android:layout_height="26dp"
-        android:layout_marginStart="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="21dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="44dp"
         android:text="NASCIMENTO:"
-        app:layout_constraintBaseline_toBaselineOf="@+id/txtNascimento"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toStartOf="@+id/txtNascimento"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
     <EditText
         android:id="@+id/txtNascimento"
-        android:layout_width="212dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginTop="13dp"
+        android:layout_marginEnd="40dp"
         android:ems="10"
         android:inputType="date"
+        app:layout_constraintBottom_toBottomOf="@+id/textView7"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtTelefone" />
+        app:layout_constraintStart_toEndOf="@+id/textView7" />
 
     <Button
         android:id="@+id/btn_cadastrar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="48dp"
+        android:layout_marginEnd="11dp"
         android:text="CADASTRAR"
         app:layout_constraintBaseline_toBaselineOf="@+id/btn_voltar"
+        app:layout_constraintEnd_toStartOf="@+id/btn_voltar"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btn_voltar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="114dp"
-        android:layout_marginEnd="90dp"
-        android:layout_marginStart="89dp"
+        android:layout_marginBottom="112dp"
         android:onClick="onClickVoltar"
         android:text="VOLTAR"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView7" />
+        app:layout_constraintStart_toEndOf="@+id/btn_cadastrar" />
 
 </android.support.constraint.ConstraintLayout>
