--- a/projetoAndroid/app/src/main/res/layout/activity_cadastrar_novo.xml
+++ b/projetoAndroid/app/src/main/res/layout/activity_cadastrar_novo.xml
@@ -11,70 +11,77 @@
         android:id="@+id/txtNome"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="40dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="33dp"
         android:ems="10"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/textView"
+        app:layout_constraintBottom_toTopOf="@+id/txtEmail"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView"
-        app:layout_constraintTop_toTopOf="@+id/textView" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="23dp"
-        android:layout_marginEnd="21dp"
-        android:layout_marginStart="68dp"
+        android:layout_marginEnd="97dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="60dp"
         android:text="NOME:"
-        app:layout_constraintBottom_toTopOf="@+id/txtEmail"
+        android:textColor="#032445"
         app:layout_constraintEnd_toStartOf="@+id/txtNome"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="1dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginStart="60dp"
+        android:layout_marginEnd="92dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="37dp"
         android:text="E-MAIL:"
-        app:layout_constraintBottom_toBottomOf="@+id/txtEmail"
+        android:textColor="#032445"
         app:layout_constraintEnd_toStartOf="@+id/txtEmail"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <EditText
         android:id="@+id/txtEmail"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="40dp"
-        android:layout_marginTop="98dp"
+        android:layout_marginBottom="15dp"
+        android:layout_marginEnd="16dp"
         android:ems="10"
         android:inputType="textEmailAddress"
+        app:layout_constraintBottom_toTopOf="@+id/txtTelefone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView2"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/txtNome" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="21dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginEnd="68dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="42dp"
         android:text="TELEFONE:"
+        android:textColor="#032445"
         app:layout_constraintEnd_toStartOf="@+id/txtTelefone"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/txtTelefone" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <EditText
         android:id="@+id/txtTelefone"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="40dp"
-        android:layout_marginTop="19dp"
+        android:layout_marginBottom="22dp"
+        android:layout_marginEnd="16dp"
         android:ems="10"
         android:inputType="phone"
+        app:layout_constraintBottom_toTopOf="@+id/txtNascimento"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView5"
         app:layout_constraintTop_toBottomOf="@+id/txtEmail" />
@@ -83,43 +90,52 @@
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="21dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="44dp"
+        android:layout_marginEnd="49dp"
+        android:layout_marginStart="16dp"
         android:text="NASCIMENTO:"
+        android:textColor="#032445"
+        app:layout_constraintBottom_toBottomOf="@+id/txtNascimento"
         app:layout_constraintEnd_toStartOf="@+id/txtNascimento"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/txtNascimento"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="40dp"
+        android:layout_marginBottom="87dp"
+        android:layout_marginEnd="16dp"
         android:ems="10"
         android:inputType="date"
-        app:layout_constraintBottom_toBottomOf="@+id/textView7"
+        app:layout_constraintBottom_toTopOf="@+id/btn_cadastrar"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView7" />
+        app:layout_constraintStart_toEndOf="@+id/textView7"
+        app:layout_constraintTop_toBottomOf="@+id/txtTelefone" />
 
     <Button
         android:id="@+id/btn_cadastrar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="11dp"
+        android:layout_width="160dp"
+        android:layout_height="54dp"
+        android:layout_marginBottom="106dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginStart="16dp"
+        android:background="#032445"
         android:text="CADASTRAR"
-        app:layout_constraintBaseline_toBaselineOf="@+id/btn_voltar"
+        android:textColor="#fff"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btn_voltar"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtNascimento" />
 
     <Button
         android:id="@+id/btn_voltar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="112dp"
+        android:layout_width="160dp"
+        android:layout_height="54dp"
+        android:layout_marginEnd="16dp"
+        android:background="#032445"
         android:onClick="onClickVoltar"
         android:text="VOLTAR"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textColor="#fff"
+        app:layout_constraintBaseline_toBaselineOf="@+id/btn_cadastrar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btn_cadastrar" />
 
