--- a/projetoAndroid/app/src/main/res/layout/activity_dados_do_usuario.xml
+++ b/projetoAndroid/app/src/main/res/layout/activity_dados_do_usuario.xml
@@ -11,9 +11,15 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="64dp"
-        android:layout_marginTop="56dp"
+        android:layout_marginBottom="291dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="63dp"
         android:text="NOME:"
+        android:textColor="#032445"
+        app:layout_constraintBottom_toTopOf="@+id/btnAlterar"
+        app:layout_constraintEnd_toStartOf="@+id/txtNome"
+        app:layout_constraintHorizontal_bias="0.133"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -21,56 +27,66 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="122dp"
-        android:layout_marginStart="60dp"
-        android:layout_marginTop="119dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="52dp"
         android:text="E-MAIL:"
-        app:layout_constraintBottom_toBottomOf="@+id/textView8"
+        android:textColor="#032445"
+        app:layout_constraintEnd_toStartOf="@+id/txtEmail"
+        app:layout_constraintHorizontal_bias="0.203"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.2" />
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="40dp"
         android:text="TELEFONE:"
-        app:layout_constraintBottom_toBottomOf="@+id/txtTelefone"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:textColor="#032445"
+        app:layout_constraintEnd_toStartOf="@+id/txtTelefone"
+        app:layout_constraintHorizontal_bias="0.258"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <TextView
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
+        android:layout_height="21dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="48dp"
         android:text="NASCIMENTO:"
-        app:layout_constraintBottom_toBottomOf="@+id/txtData"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:textColor="#032445"
+        app:layout_constraintEnd_toStartOf="@+id/txtData"
+        app:layout_constraintHorizontal_bias="0.338"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <Button
-        android:id="@+id/button6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="100dp"
-        android:layout_marginEnd="76dp"
-        android:layout_marginTop="101dp"
+        android:id="@+id/btnVolt"
+        android:layout_width="160dp"
+        android:layout_height="54dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="8dp"
+        android:background="#032445"
         android:onClick="onClickListar"
         android:text="VOLTAR"
+        android:textColor="#fff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btnAlterar"
         app:layout_constraintTop_toBottomOf="@+id/txtData"
-        app:layout_constraintVertical_bias="0.538" />
+        app:layout_constraintVertical_bias="0.56" />
 
     <EditText
         android:id="@+id/txtNome"
         android:layout_width="212dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="40dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="36dp"
         android:editable="false"
         android:ems="10"
         android:inputType="textPersonName"
@@ -81,8 +97,7 @@
         android:id="@+id/txtEmail"
         android:layout_width="212dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="40dp"
-        android:layout_marginTop="11dp"
+        android:layout_marginTop="20dp"
         android:editable="false"
         android:ems="10"
         android:inputType="textPersonName"
@@ -92,34 +107,37 @@
     <EditText
         android:id="@+id/txtTelefone"
         android:layout_width="212dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="58dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginTop="60dp"
+        android:layout_height="46dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="@+id/txtData"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/txtEmail" />
+        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />
 
     <EditText
         android:id="@+id/txtData"
         android:layout_width="212dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="40dp"
+        android:layout_marginTop="20dp"
         android:ems="10"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.445" />
+        app:layout_constraintTop_toBottomOf="@+id/txtTelefone" />
 
     <Button
         android:id="@+id/btnAlterar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="68dp"
+        android:layout_width="159dp"
+        android:layout_height="54dp"
+        android:layout_marginBottom="84dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:background="#032445"
         android:text="Atualizar"
-        app:layout_constraintBaseline_toBaselineOf="@+id/button6"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:textColor="#fff"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btnVolt"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        app:layout_constraintVertical_bias="0.525" />
 </android.support.constraint.ConstraintLayout>
