--- a/projetoAndroid/app/src/main/res/layout/activity_menu__principal.xml
+++ b/projetoAndroid/app/src/main/res/layout/activity_menu__principal.xml
@@ -4,34 +4,67 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.crowwinter.projetoandroid.Menu_Principal">
+    android:background="@android:color/transparent"
+    android:clickable="false"
+    tools:context="com.example.crowwinter.projetoandroid.Menu_Principal"
+    tools:layout_editor_absoluteY="81dp">
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btnListar"
         android:layout_width="160dp"
         android:layout_height="54dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="55dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        android:background="#032445"
+        android:elevation="0dp"
+        android:longClickable="false"
         android:onClick="onClick2"
+        android:soundEffectsEnabled="false"
         android:text="LISTAR TUDO"
+        android:textColor="#fff"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button"
-        app:layout_constraintVertical_bias="0.125" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnCadastro"
         android:layout_width="160dp"
         android:layout_height="54dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="132dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:background="#032445"
+        android:elevation="0dp"
+        android:longClickable="false"
         android:onClick="onClick"
+        android:selectAllOnFocus="false"
+        android:shadowColor="@android:color/black"
+        android:soundEffectsEnabled="false"
         android:text="CADASTRAR"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        android:textColor="#fff"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:elevation="10dp"
+        android:shadowColor="@android:color/black"
+        android:shadowDx="50"
+        android:shadowDy="50"
+        android:text="J.A.R.V.I.S"
+        android:textColor="#032445"
+        android:textSize="36sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.255" />
 </android.support.constraint.ConstraintLayout>
